Keyboard layout finished, styling needs to be fixed, but not important

--- a/app/src/main/res/xml/qwerty.xml
+++ b/app/src/main/res/xml/qwerty.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Keyboard xmlns:android="http://schemas.android.com/apk/res/android"
-    android:keyWidth="42dp"
+    android:keyWidth="9.5%p"
     android:keyHeight="42dp"
-    android:horizontalGap="6dp"
-    android:verticalGap="6dp"
+    android:horizontalGap="1dp"
+    android:verticalGap="5dp"
     android:gravity="center" >
 
     <!-- Row 1: 10 keys -->
@@ -59,7 +59,7 @@
 
     <!-- Row 3: 9 keys (Shift + 7 chars + Delete) -->
     <Row>
-        <Key android:codes="20" android:keyLabel="⇧" android:keyWidth="50dp" android:keyEdgeFlags="left"/>
+        <Key android:codes="-1" android:keyLabel="⇧" android:keyWidth="50dp" android:keyEdgeFlags="left"/>
         <Key android:codes="122" android:keyLabel="z" />
         <Key android:codes="120" android:keyLabel="x" />
         <Key android:codes="99" android:keyLabel="c" />
@@ -72,9 +72,10 @@
 
     <!-- Row 4: Space + Send -->
     <Row>
+        <Key android:codes="-2" android:keyLabel="\?123" android:keyWidth="16%p"/>
         <Key android:codes="46" android:keyLabel="." android:keyWidth="16%p"/>
         <Key android:codes="32" android:keyLabel="Space" android:keyWidth="50%p"/>
         <Key android:codes="44" android:keyLabel="," android:keyWidth="16%p"/>
-        <Key android:codes="-1" android:keyLabel="↵" android:keyWidth="34%p" android:keyEdgeFlags="right"/>
+        <Key android:codes="-4" android:keyLabel="↵" android:keyWidth="16%p" android:keyEdgeFlags="right"/>
     </Row>
 </Keyboard>
